--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <nav class="fundoTop border-gray-200 dark:bg-gray-900">
             <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
                 <a href="index.html" class="flex items-center space-x-3 rtl:space-x-reverse">
-                    <img src="img/image (13).png" class="logBord h-8" alt="Logo" />
+                    <img src="img/Logo Surto - Copia.png" class="logBord h-8" alt="Logo" />
                     <span id="corLog"
-                        class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">System
-                        Life</span>
+                        class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Surto 
+                        System</span>
                 </a>
 
 
