--- a/index.html
+++ b/index.html
@@ -45,8 +45,30 @@
     <h4 class="subTitle1">Bem-vindo(a) de volta ao seu painel do psicólogo</h4>
     </main>
 
+    <div class="card_Group_1">
+        <div class="conteudo1">
+            <div class="total_pacientes">Total de pacientes:</div>
+            <div class="numero_pacientes">0</div>
+            <div class="pacientes_cadastrados">Pacientes cadastrados</div>
+        </div>
+        <div class="conteudo1">
+            <div class="consultas_hoje">Consultas de hoje:</div>
+            <div class="numero_consultas">0</div>
+            <div class="Agendamentos_hoje">Agendamentos para hoje</div>
+        </div>
+        <div class="conteudo1">
+            <div class="Proxima_consulta">Próxima consulta:</div>
+            <div class="hora_consulta">--:--</div>
+            <div class="Agenda_hoje">Agendamentos para hoje</div>
+        </div>
+    </div>
 
-    <!-- Card inicio -->
+
+
+    <h1 class="title2">Painel de Navegação</h1>
+
+
+ 
 
     <div class="card_Group">
 
@@ -158,6 +180,31 @@
             </div>
         </div>
 
+    </div>
+
+    <!-- <div class="Sidebar2 flex gap-6"> -->
+        <!-- Sidebar -->
+        <!-- <aside class="sideee1"
+            style="width: 800px; background-color: white; border: 1px solid #e5e7eb; border-radius: 8px; padding: 16px; height: fit-content;">
+            <div class="menuNav">
+                <div class="menu" style="font-size: 1.25rem; font-weight: bold; color: #1f2937; margin-bottom: 16px;">
+                    Próximos Eventos</div>
+                <nav id="navbar3" style="margin-bottom: 16px;">
+                    <a style="display: block; cursor: pointer; color: #4b5563; text-decoration: none; margin-bottom: 8px;"
+                        href="/">Hoje</a>
+                    <a style="display: block; cursor: pointer; color: #4b5563; text-decoration: none; margin-bottom: 8px;"
+                        href="/">Amanhã</a>
+                    <a style="display: block; cursor: pointer; color: #4b5563; text-decoration: none; margin-bottom: 8px;"
+                        href="/">Esta semana</a>
+                </nav>
+            </div>
+            <p style="margin-top: 24px; color: #6b7280;">Nenhum evento agendado</p>
+        </aside> -->
+
+        
+
+        <!-- Main Content -->
+        <div class="flex-1"></div>
     </div>
 
 
