--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
             <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
                 <a href="index.html" class="flex items-center space-x-3 rtl:space-x-reverse">
                     <img src="img/Logo Surto - Copia.png" class="logBord h-8" alt="Logo" />
-                    <span id="corLog"
-                        class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Surto 
+                    <span id="corLog" class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Surto
                         System</span>
                 </a>
 
@@ -41,8 +40,8 @@
 
 
     <main class="mainCorpo1">
-    <h1 class="title1">Olá, Thiago Oliveira! 👋</h1>
-    <h4 class="subTitle1">Bem-vindo(a) de volta ao seu painel do psicólogo</h4>
+        <h1 class="title1">Olá, Thiago Oliveira! 👋</h1>
+        <h4 class="subTitle1">Bem-vindo(a) de volta ao seu painel do psicólogo</h4>
     </main>
 
     <div class="card_Group_1">
@@ -68,7 +67,7 @@
     <h1 class="title2">Painel de Navegação</h1>
 
 
- 
+
 
     <div class="card_Group">
 
@@ -157,7 +156,7 @@
                 </a>
             </div>
         </div>
-        
+
 
 
         <div class="margem1 border-gray-200">
@@ -182,29 +181,16 @@
 
     </div>
 
-    <!-- <div class="Sidebar2 flex gap-6"> -->
-        <!-- Sidebar -->
-        <!-- <aside class="sideee1"
-            style="width: 800px; background-color: white; border: 1px solid #e5e7eb; border-radius: 8px; padding: 16px; height: fit-content;">
-            <div class="menuNav">
-                <div class="menu" style="font-size: 1.25rem; font-weight: bold; color: #1f2937; margin-bottom: 16px;">
-                    Próximos Eventos</div>
-                <nav id="navbar3" style="margin-bottom: 16px;">
-                    <a style="display: block; cursor: pointer; color: #4b5563; text-decoration: none; margin-bottom: 8px;"
-                        href="/">Hoje</a>
-                    <a style="display: block; cursor: pointer; color: #4b5563; text-decoration: none; margin-bottom: 8px;"
-                        href="/">Amanhã</a>
-                    <a style="display: block; cursor: pointer; color: #4b5563; text-decoration: none; margin-bottom: 8px;"
-                        href="/">Esta semana</a>
-                </nav>
+    <div id="proxevent" class="blocos">
+        <div id="proxeventitle" class="title-blocos">
+            <h2>Próximos eventos</h2>
+            <div id="filtros">
+                <h3 class="animacao">Hoje</h3>
+                <h3 class="animacao">Amanhã</h3>
+                <h3 class="animacao">Esta semana</h3>
             </div>
-            <p style="margin-top: 24px; color: #6b7280;">Nenhum evento agendado</p>
-        </aside> -->
-
-        
-
-        <!-- Main Content -->
-        <div class="flex-1"></div>
+        </div>
+        <h2>Nenhum evento registrado</h2>
     </div>
 
 
