--- a/index.html
+++ b/index.html
@@ -185,9 +185,9 @@
         <div id="proxeventitle" class="title-blocos">
             <h2>Próximos eventos</h2>
             <div id="filtros">
-                <h3 class="animacao">Hoje</h3>
-                <h3 class="animacao">Amanhã</h3>
-                <h3 class="animacao">Esta semana</h3>
+                <a href="#" class="animacao"><h3>Hoje</h3></a>
+                <a href="#" class="animacao"><h3>Amanhã</h3></a>
+                <a href="#" class="animacao"><h3>Esta semana</h3></a>
             </div>
         </div>
         <h2>Nenhum evento registrado</h2>
