--- a/CadastroPsi.html
+++ b/CadastroPsi.html
@@ -9,18 +9,32 @@
     <link rel="stylesheet" href="css/CadastrarPS.css">
 </head>
 
-<body>
-    <header>
-        <nav class="fundoTop border-gray-200 dark:bg-gray-900">
-            <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-                <a href="Gestão.html" class="flex items-center space-x-3 rtl:space-x-reverse">
-                    <img src="img/image (13).png" class="logBord h-8" alt="Logo" />
-                    <span id="corLog"
-                        class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Cadastro de
-                        Psicólogos</span></a>
 
-    </header>
-    
+<header>
+    <nav class="fundoTop border-gray-200 dark:bg-gray-900">
+        <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+            <a href="index.html" class="flex items-center space-x-3 rtl:space-x-reverse">
+                <img src="img/Logo Surto - Copia.png" class="logBord h-8" alt="Logo" />
+                <span id="corLog" class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Cadastro
+                    Psicológo</span>
+            </a>
+
+        </div>
+    </nav>
+
+</header>
+
+
+<button class="SairBot">
+    <a href="index.html">
+        <img src="img/campnha/arrow-left.svg" alt="Voltar" class="botSair w-6 h-6">
+        <span class="NomBot">Voltar</span>
+    </a>
+</button>
+
+
+
+<body>
 
 
 
