--- a/CadastroPsi.html
+++ b/CadastroPsi.html
@@ -79,6 +79,13 @@
     </div>
     </nav>
 
+    <div id="proxevent" class="blocos">
+        <div id="proxeventitle" class="title-blocos">
+            <h2>Psicológo</h2>
+        </div>
+        <h2>Nenhum psicólogo registrado</h2>
+    </div>
+
 </body>
 <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
 <script src="js/CadastroPs.js"></script>
