--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="conteudo">
                 <a href="atividadeSala.html">
                     <h5 class="titleName mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
-                        Atividades de Sala
+                        Turmas
                     </h5>
                 </a>
 
@@ -135,7 +135,7 @@
             <div class="conteudo">
                 <a href="orientacaoS.html">
                     <h5 class="titleName mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
-                        Orientações SENAI
+                        Colaboradores
                     </h5>
                 </a>
 
@@ -173,8 +173,31 @@
                 </a>
             </div>
         </div>
+        
 
+        <a href="CadastroPsi.html">
+        <div class="margem1 border-gray-200">
+            <div class="conteudo">
+                <!-- <a href="CadastroPsi.html"> -->
+                    <h5 class="titleName mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
+                        Cadastro Psicólogos
+                    </h5>
+                <!-- </a> -->
+
+                <div class="CorbotCard">
+                    <svg class="svgTam w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true"
+                        xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M12 7v10m5-5H7m5-9a9 9 0 1 0 9 9 9 9 0 0 0-9-9Z"/>
+                    </svg>
+
+                </div>
+            </div>
     </div>
+        </a>
+    </div>
+
+
 
     <div id="proxevent" class="blocos">
         <div id="proxeventitle" class="title-blocos">
